--- a/article_manager/templates/articles_list.html
+++ b/article_manager/templates/articles_list.html
@@ -7,7 +7,7 @@
         <h1>Articles on dokuwiki</h1>
         <ol>
         {% for article in dokuwiki_articles %}
-            <li>{{ article.name }} - <a href={{ article.source }}> {{ article.source }} </a></li>
+            <li>{{ article.name }} - <a href="https://libre.lugons.org/wiki/doku.php?id={{ article.source }}"> {{ article.source }} </a></li>
         {% endfor %}
         </ol>
 
