--- a/article_manager/templates/wiki_pre_import.html
+++ b/article_manager/templates/wiki_pre_import.html
@@ -4,7 +4,7 @@
 
 <body>
 <table>
-<form method="POST" action="{% url "wiki_import"%}">{%csrf_token%}
+<form method="POST">{%csrf_token%}
 {{form}}
 </table>
 
