Article diff with wiki article

--- a/article_manager/templates/article_view.html
+++ b/article_manager/templates/article_view.html
@@ -2,6 +2,8 @@
 
 <body>
 
+<a href="{% url "article_diff" article.pk %}">See difference between liberator article and current wiki article</a>
+
 <h1>{{article.name}} </h1>
 
 <p>Author: {{article.author}}</p>
