--- a/article_manager/templates/articles_list.html
+++ b/article_manager/templates/articles_list.html
@@ -7,10 +7,9 @@
         <h1>Articles on dokuwiki</h1>
         <ol>
         {% for article in dokuwiki_articles %}
-            <li>{{ article.name }} - 
-	    <a href="https://libre.lugons.org/wiki/doku.php?id={{ article.source_lat }}">Latin</a> 
-	    <a href="https://libre.lugons.org/wiki/doku.php?id={{ article.source_cyr }}">Cyrilic</a>
-	    <a href={%url "wiki_import" article.source_lat%}>Import to database</a>
+            <li>
+	    <a href="https://libre.lugons.org/wiki/doku.php?id={{ article}}">{{article}}</a> 
+	    <a href={%url "wiki_import" article%}>Import to database</a>
 	    </li>
         {% endfor %}
         </ol>
