Editor - article creation and saving to database

--- a/article_editor/templates/editor.html
+++ b/article_editor/templates/editor.html
@@ -154,6 +154,8 @@ src="data:image/gif;base64,R0lGODlhFgAWAOMKAB1ChDRLY19vj3mOrpGjuaezxrCztb/I19Ha7
 	{%else%}
 		{{article.contents_lat}}
 	{%endif%}
+{% else %}
+	<p>Write some text here</p>
 {%endif%}
 </div>
 <p><input type="submit" value="Send" /></p>
