Better import from dokuwiki

--- a/article_manager/templates/articles_list.html
+++ b/article_manager/templates/articles_list.html
@@ -9,7 +9,8 @@
         {% for article in dokuwiki_articles %}
             <li>
 	    <a href="https://libre.lugons.org/wiki/doku.php?id={{ article}}">{{article}}</a> 
-	    <a href={%url "wiki_import" article%}>Import to database</a>
+	    <a href={%url "wiki_import" article "lat"%}>Import to database (lat)</a>
+	    <a href={%url "wiki_import" article "cyr"%}>Import to database (cyr)</a>
 	    </li>
         {% endfor %}
         </ol>
