--- a/article_manager/templates/wiki_import.html
+++ b/article_manager/templates/wiki_import.html
@@ -1,9 +1,9 @@
-<html>
+{% extends "base.html" %}
 
-<body>
+{% block content %}
+
 <p>{{imported }} articles have been imported</p>
 
 <p>{{wiki_slug}}</p>
-</body>
 
-</html>
+{% endblock %}
