--- a/article_manager/templates/articles_list.html
+++ b/article_manager/templates/articles_list.html
@@ -7,13 +7,11 @@
         <ol>
         {% for article in dokuwiki_articles %}
             <li>
-	    <a href="https://libre.lugons.org/wiki/doku.php?id={{ article.wiki_slug}}">{{article.name}}</a>
-	    <a href={%url "wiki_import" article.wiki_slug "lat"%}>Import to database (lat)</a>
-	    <a href={%url "wiki_import" article.wiki_slug "cyr"%}>Import to database (cyr)</a>
-	    {% if article.article_with_same_title%}
-	    	<a href="{% url "wiki_extend" article.wiki_slug article.article_with_same_title.pk "lat" %}">Extend to lat</a>
-		<a href="{% url "wiki_extend" article.wiki_slug article.article_with_same_title.pk "cyr" %}">Extend to cyr</a>
-	    {% endif %}
+	    <a href="https://libre.lugons.org/wiki/doku.php?id={{ article}}">{{article}}</a>
+	    <a href={%url "wiki_import" article "lat"%}>Import to database (lat)</a>
+	    <a href={%url "wiki_import" article "cyr"%}>Import to database (cyr)</a>
+	    <a href="{% url "wiki_extend" article "auto" "lat" %}">Extend to lat</a>
+	    <a href="{% url "wiki_extend" article "auto" "cyr" %}">Extend to cyr</a>
 	    </li>
         {% endfor %}
         </ol>
