--- a/static/editor-style.css
+++ b/static/editor-style.css
@@ -3,7 +3,7 @@
 img.intLink { border: 0; }
 #textBox {
   width: 75%;
-  height: 200px;
+  height: 70%;
   border: 1px #000000 solid;
   padding: 12px;
   overflow: scroll;
@@ -11,12 +11,18 @@ img.intLink { border: 0; }
 #textBox #sourceText {
   padding: 0;
   margin: 0;
-  min-width: 498px;
-  min-height: 200px;
+  height: 40%; 
 }
 #editMode label { cursor: pointer; }
 
 #toolBar 
 {
   background-color: blue; 
+}
+
+#toolBar .tool 
+{
+	background-color: "inherit";
+	padding: 2px;
+	display: inline-block; 
 }
