--- a/static/editor-style.css
+++ b/static/editor-style.css
@@ -2,8 +2,8 @@
 .intLink { cursor: pointer; }
 img.intLink { border: 0; }
 #textBox {
-  width: 75%;
-  height: 70%;
+  width: 100%;
+  height: 200px;
   border: 1px #000000 solid;
   padding: 12px;
   overflow: scroll;
