--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 
-#header 
+#base-navigation 
 {
 	background-color: #006BB2;
 	color: white;
@@ -7,30 +7,12 @@
 	padding-bottom: 10px;
 }
 
-#header * 
-{
-	margin: 10px; 
-}
-
-#header a 
+#base-navigation a 
 {
 	color: white; 
-	text-decoration: none; 
-	display: block; 
 }
 
-#header #logo 
+#base-navigation a:hover 
 {
-	float: left; 
+	background-color: #009BB2;
 }
-
-#header #mainmenu 
-{
-	float: left; 
-}
-
-#header #profile 
-{
-	text-align: right; 
-}
-
