Set dokuwiki user/pass for liberator

--- a/provision/roles/liberator/templates/settings_dist.py.j2
+++ b/provision/roles/liberator/templates/settings_dist.py.j2
@@ -1,2 +1,2 @@
-DOKUWIKI_USERNAME = "" #set your remote API username
-DOKUWIKI_PASSWORD = "" #set your remote API password
+DOKUWIKI_USERNAME = "admin"
+DOKUWIKI_PASSWORD = "admin"
