--- a/provision/roles/dokuwiki/templates/local.php.j2
+++ b/provision/roles/dokuwiki/templates/local.php.j2
@@ -10,3 +10,5 @@ $conf['license'] = 'cc-by-sa';
 $conf['useacl'] = 1;
 $conf['superuser'] = '@admin';
 $conf['disableactions'] = 'register';
+$conf['remote'] = 1;
+$conf['remoteuser'] = '';
